--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <a href="">Home</a>
                     </li>
                     <li>
-                        <a href="">AboutUs</a>
+                        <a href="">About Us</a>
                     </li>
                     <li>
                         <a href="">Services</a>
@@ -48,7 +48,7 @@
             <h1>Powerful Digital <br> Solutions With AI.
             </h1>
             <p>
-                We are team of talented Administrator
+                We are team of talented Admini
             </p>
         </div>
     </section>
