--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1>Powerful Digital <br> Solutions With AI.
             </h1>
             <p>
-                We are team of talented Admini
+                We are team of talented Administrator
             </p>
         </div>
     </section>
