adding img and editing paragraph

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         </div>
 
         <div class="my-banner-content">
-            <h1>Powerful Digital <br> Solutions With AI.
+            <h1>Powerful Digital <br> Solutions With IT Architecture.
             </h1>
             <p>
-                We are team of talented Administrator
+                We are team of talented System Architects
             </p>
         </div>
     </section>
@@ -62,25 +62,24 @@
 
         <div>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                We specialize in providing powerful digital solutions through innovative IT architecture and system design. Our team of talented system architects is committed to delivering scalable, 
+                <br> secure, and efficient solutions tailored to your business needs.
             </p>
         </div>
         <div class="aboutus-subdiv">
             <div>
                 <p>
-                    Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua
+                    We are a leading provider of powerful digital solutions, specializing in IT architecture and system design. Our team is dedicated to helping businesses optimize their infrastructure with tailored solutions that enhance performance, scalability, and security
                 </p>
-                <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li>Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li> ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                <li>Expertise in IT architecture and system integration</li>
+                <li>Delivering scalable and secure digital solutions</li>
+                <li> Focused on continuous innovation and optimization.</li>
                
             </div>
             
             <div>
-                <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit</p>
+                <p>At the heart of our approach is a focus on innovation. Our system architects work closely with clients to understand their unique needs, offering personalized solutions that drive efficiency and growth.</p>
+                <p>Our team’s commitment to excellence ensures that we consistently exceed expectations. By combining technical proficiency with a customer-centric approach, we help businesses achieve long-term success. </p>
                 <button class="btn-tranparent">Learn More</button>
             </div>
         </div>
@@ -95,8 +94,7 @@
         <h1>Services</h1>
         <div>
             <p>
-            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit <br>
-            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                Whether you need advanced database solutions, seamless cloud integration, or a complete IT infrastructure overhaul, we are committed to providing cutting-edge services that drive innovation and growth for your business.
             </p>
         </div>
         <div class="my-div-bg">
@@ -104,34 +102,34 @@
             <div class="my-cards">
                 <div class="card"> 
                     <i>@</i>
-                    <h1>loren ipsum</h1>
-                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                    <h1>IT Infrastructure Design</h1>
+                    <p>Design Custom IT Infrastructure to Ensure Scalability, Performance, and Future Business Success.</p>
                 </div>
                 <div class="card">  
                     <i>@</i>
-                    <h1>loren ipsum</h1>
-                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p></div>
+                    <h1>Database Optimization</h1>
+                    <p>Optimize Database Performance, Enhance Security, and Improve Operational Efficiency for Growth.</p></div>
                 <div class="card">
                     <i>@</i>
-                    <h1>loren ipsum</h1>
-                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                    <h1>Cloud Integration</h1>
+                    <p>Seamlessly Integrate Cloud Solutions to Enhance Scalability and Boost Business Efficiency.</p>
                 </div>
             </div>
             <div class="my-cards">
                 <div class="card">
                     <i>@</i>
-                    <h1>loren ipsum</h1>
-                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                    <h1>Data Backup Solutions</h1>
+                    <p>Ensure Business Continuity with Reliable Data Backup Solutions for Critical Information Protection.</p>
                 </div>
                 <div class="card">
                     <i>@</i>
-                    <h1>loren ipsum</h1>
-                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                    <h1>System Security Solutions</h1>
+                    <p>Protect Your Systems and Data from Evolving Threats with Advanced Security Solutions.</p>
                 </div>
                 <div class="card">
                     <i>@</i>
-                    <h1>loren ipsum</h1>
-                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                    <h1>Business Intelligence & Analytics</h1>
+                    <p>Transform Raw Data into Valuable Insights for Smarter Decision Making and Business Growth.</p>
                 </div>
             </div>
         </div>
@@ -147,8 +145,7 @@
         <div>
             <h1>Call To Action</h1>
             <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur  laborum
+                Unlock the full potential of your business with our tailored IT solutions. Contact us today to start your journey toward digital transformation and long-term success.
             </p>
         </div>
         <div>
